service.yml
apiVersion: v1
kind: Service
metadata:
  name: sk-service
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
      app: dj
  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      #nodePort: 30600
