ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shaik-ingress 
  namespace: ingress-nginx

spec:
  ingressClassName: nginx
  rules: 
  - host: shaikmastan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sk-service
            port:
              number: 80
